@@ -47,21 +47,21 @@ public class ServiceInvocationAdvice implements MethodInterceptor, Ordered {
 
     private void checkForBeforeInterceptor(Method method, Annotation annotation) {
         if (annotation instanceof ServiceCallBeforeInterceptor) {
-            Class<? extends ServiceMethodBeforeAdvice>[] interceptorClasses = ((ServiceCallBeforeInterceptor) annotation).value();
+            Class<? extends ServiceMethodBeforeAdvice>[] interceptorClasses = ((ServiceCallBeforeInterceptor) annotation)
+                    .value();
             List<ServiceMethodBeforeAdvice> interceptors = beforeInterceptors.get(method);
             if (interceptors == null) {
                 interceptors = new ArrayList<ServiceMethodBeforeAdvice>();
                 beforeInterceptors.put(method, interceptors);
             }
             for (Class<? extends ServiceMethodBeforeAdvice> interceptorClass : interceptorClasses) {
-            	try {
-                    ServiceMethodBeforeAdvice preInterceptor = interceptorClass.getConstructor()
-                        .newInstance();
+                try {
+                    ServiceMethodBeforeAdvice preInterceptor = interceptorClass.getConstructor().newInstance();
                     interceptors.add(preInterceptor);
                 } catch (Exception e) {
-                    throw new RuntimeException(String.format("Wrong annotation definining before interceptor for method \"%s\" of class \"%s\"",
-                        method.getName(),
-                        serviceClass.getName()));
+                    throw new OpenLRuntimeException(String.format(
+                            "Wrong annotation definining before interceptor for method \"%s\" of class \"%s\"",
+                            method.getName(), serviceClass.getName()), e);
                 }
             }
         }
@@ -69,7 +69,8 @@ public class ServiceInvocationAdvice implements MethodInterceptor, Ordered {
 
     private void checkForAfterReturningInterceptor(Method method, Annotation annotation) {
         if (annotation instanceof ServiceCallAfterReturningInterceptor) {
-            Class<? extends ServiceMethodAfterReturningAdvice<?>>[] interceptorClasses = ((ServiceCallAfterReturningInterceptor) annotation).value();
+            Class<? extends ServiceMethodAfterReturningAdvice<?>>[] interceptorClasses = ((ServiceCallAfterReturningInterceptor) annotation)
+                    .value();
             List<ServiceMethodAfterReturningAdvice<?>> interceptors = afterReturningInterceptors.get(method);
             if (interceptors == null) {
                 interceptors = new ArrayList<ServiceMethodAfterReturningAdvice<?>>();
@@ -78,20 +79,21 @@ public class ServiceInvocationAdvice implements MethodInterceptor, Ordered {
             for (Class<? extends ServiceMethodAfterReturningAdvice<?>> interceptorClass : interceptorClasses) {
                 try {
                     ServiceMethodAfterReturningAdvice<?> postInterceptor = interceptorClass.getConstructor()
-                        .newInstance();
+                            .newInstance();
                     interceptors.add(postInterceptor);
                 } catch (Exception e) {
-                    throw new RuntimeException(String.format("Wrong annotation definining afterReturning interceptor for method \"%s\" of class \"%s\"",
-                        method.getName(),
-                        serviceClass.getName()));
+                    throw new OpenLRuntimeException(String.format(
+                            "Wrong annotation definining afterReturning interceptor for method \"%s\" of class \"%s\"",
+                            method.getName(), serviceClass.getName()), e);
                 }
             }
         }
     }
-    
+
     private void checkForAfterThrowingInterceptor(Method method, Annotation annotation) {
         if (annotation instanceof ServiceCallAfterThrowingInterceptor) {
-            Class<? extends ServiceMethodAfterThrowingAdvice>[] interceptorClasses = ((ServiceCallAfterThrowingInterceptor) annotation).value();
+            Class<? extends ServiceMethodAfterThrowingAdvice>[] interceptorClasses = ((ServiceCallAfterThrowingInterceptor) annotation)
+                    .value();
             List<ServiceMethodAfterThrowingAdvice> interceptors = afterThrowingInterceptors.get(method);
             if (interceptors == null) {
                 interceptors = new ArrayList<ServiceMethodAfterThrowingAdvice>();
@@ -99,13 +101,12 @@ public class ServiceInvocationAdvice implements MethodInterceptor, Ordered {
             }
             for (Class<? extends ServiceMethodAfterThrowingAdvice> interceptorClass : interceptorClasses) {
                 try {
-                    ServiceMethodAfterThrowingAdvice postInterceptor = interceptorClass.getConstructor()
-                        .newInstance();
+                    ServiceMethodAfterThrowingAdvice postInterceptor = interceptorClass.getConstructor().newInstance();
                     interceptors.add(postInterceptor);
                 } catch (Exception e) {
-                    throw new RuntimeException(String.format("Wrong annotation definining afterThrowing interceptor for method \"%s\" of class \"%s\"",
-                        method.getName(),
-                        serviceClass.getName()));
+                    throw new OpenLRuntimeException(String.format(
+                            "Wrong annotation definining afterThrowing interceptor for method \"%s\" of class \"%s\"",
+                            method.getName(), serviceClass.getName()), e);
                 }
             }
         }
@@ -123,56 +124,59 @@ public class ServiceInvocationAdvice implements MethodInterceptor, Ordered {
     protected Object afterReturningInvocation(Method interfaceMethod, Object result, Object... args) throws Throwable {
         List<ServiceMethodAfterReturningAdvice<?>> postInterceptors = afterReturningInterceptors.get(interfaceMethod);
         if (postInterceptors != null && postInterceptors.size() > 0) {
+            Object ret = null;
             for (ServiceMethodAfterReturningAdvice<?> interceptor : postInterceptors) {
-                result = interceptor.afterReturning(interfaceMethod, result, args);
+                ret = interceptor.afterReturning(interfaceMethod, ret, args);
             }
+            return ret;
+        } else {
+            return result;
         }
-        return result;
     }
 
     protected void afterThrowingInvocation(Method interfaceMethod, Throwable ex, Object... args) throws Throwable {
         List<ServiceMethodAfterThrowingAdvice> postInterceptors = afterThrowingInterceptors.get(interfaceMethod);
         if (postInterceptors != null && postInterceptors.size() > 0) {
-        	Throwable t = ex;
-        	boolean f = false;
+            Throwable t = ex;
             for (ServiceMethodAfterThrowingAdvice interceptor : postInterceptors) {
-            	try{
-            		interceptor.afterThrowing(interfaceMethod, t, args);
-            	}catch (Throwable e) {
-            		if (t.getClass().isAssignableFrom(e.getClass())){
-            			t = e;
-            			f = true;
-            		}else{
-            			throw new OpenLRuntimeException(String.format("Wrong exception in after throwing advice for method \"%s\" of class \"%s\"", interfaceMethod.getName(),  serviceClass.getName()));
-            		}
-				}
+                try {
+                    interceptor.afterThrowing(interfaceMethod, t, args);
+                } catch (Throwable e) {
+                    if (t.getClass().isAssignableFrom(e.getClass())) {
+                        t = e;
+                    } else {
+                        throw new OpenLRuntimeException(String.format(
+                                "Wrong exception in after throwing advice for method \"%s\" of class \"%s\"",
+                                interfaceMethod.getName(), serviceClass.getName()), t);
+                    }
+                }
             }
-            if (f) throw t;
+            if (t != ex) {
+                throw t;
+            }
         }
     }
 
     public Object invoke(MethodInvocation invocation) throws Throwable {
         Method calledMethod = invocation.getMethod();
         Object[] args = invocation.getArguments();
-        Method interfaceMethod = MethodUtils.getMatchingAccessibleMethod(serviceClass,
-                calledMethod.getName(),
+        Method interfaceMethod = MethodUtils.getMatchingAccessibleMethod(serviceClass, calledMethod.getName(),
                 calledMethod.getParameterTypes());
         try {
             beforeInvocation(interfaceMethod, args);
-            Method beanMethod = MethodUtils.getMatchingAccessibleMethod(serviceBean.getClass(),
-                calledMethod.getName(),
-                calledMethod.getParameterTypes());
+            Method beanMethod = MethodUtils.getMatchingAccessibleMethod(serviceBean.getClass(), calledMethod.getName(),
+                    calledMethod.getParameterTypes());
             Object result = beanMethod.invoke(serviceBean, args);
 
             result = afterReturningInvocation(interfaceMethod, result, args);
             return result;
         } catch (Throwable t) {
-        	afterThrowingInvocation(interfaceMethod, t, args);
-            throw new RuleServiceWrapperException(getExceptionMessage(calledMethod, args, t), t);
+            afterThrowingInvocation(interfaceMethod, t, args);
+            throw new RuleServiceWrapperException(getExceptionMessage(calledMethod, t, args), t);
         }
     }
 
-    protected String getExceptionMessage(Method method, Object[] args, Throwable ex) {
+    protected String getExceptionMessage(Method method, Throwable ex, Object... args) {
         StringBuilder argsTypes = new StringBuilder();
         boolean f = false;
         for (Class<?> clazz : method.getParameterTypes()) {
@@ -209,12 +213,12 @@ public class ServiceInvocationAdvice implements MethodInterceptor, Ordered {
         }
         sb.append(" OpenL clause messages are: ".toUpperCase());
         Throwable t = ex.getCause();
-        boolean g = false;
+        boolean isNotFirst = false;
         while (t != null && t.getCause() != t) {
             if ((t instanceof OpenLRuntimeException || t instanceof OpenLException) && t.getMessage() != null) {
-                if (g)
+                if (isNotFirst)
                     sb.append(MSG_SEPARATOR);
-                g = true;
+                isNotFirst = true;
                 sb.append(t.getMessage());
             }
             t = t.getCause();
